<resources>
    <string name="app_name">Huddle Up</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Home tab -->
    <string name="homeTab">Home</string>
    <string name="shareCheckBoxText">Share</string>
    <string name="viewCheckBoxText">View</string>
    <string name="messageCheckBoxText">Msg</string>

    <!-- Contact options -->
    <string name="shareTimeCheckBoxText">Share Indefinitely</string>
    <string name="viewTimeCheckBoxText">View Indefinitely</string>
    <string name="editContactText">Edit Contact</string>
    <string name="deleteContactText">Delete Contact</string>

    <!-- Map tab -->
    <string name="mapTab">Map</string>

    <!-- Message tab -->
    <string name="messageTab">Inbox</string>

    <!--SingleMessage Activity -->
    <string name="title_activity_single_message">Bob, John, Jerry</string>

    <!-- Account tab -->
    <string name="accountTab">Account</string>

    <!-- Menu titles -->
    <string name="main_menu_title">Menu Main</string>
    <string name="message_menu_title">Message Menu</string>
    <string name="single_message_menu_title">Single Message Menu</string>
    <string name="add_contact_button_description">Add Contact</string>
    <string name="create_new_message_button_description">Create New Message</string>
    <string name="title_activity_edit_contact">Edit Contact</string>
</resources>
