<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/contactEntry"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/contactData"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_toStartOf="@+id/shareCheckBox">

        <TextView
            android:id="@+id/name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/text_primary"
            android:padding="5dp"
            android:singleLine="true" />

        <TextView
            android:id="@+id/status"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/text_secondary"
            android:padding="5dp"
            android:singleLine="true" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/shareCheckBox"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/viewCheckBox" >

        <TextView
            android:id="@+id/shareText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/text_primary"
            android:padding="5dp"
            android:text="@string/shareCheckBoxText" />

        <CheckBox
            android:id="@+id/shareBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/shareText"
            android:layout_centerHorizontal="true"
            android:focusable="false"
            android:focusableInTouchMode="false" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/viewCheckBox"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/messageCheckBox">

        <TextView
            android:id="@+id/viewText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/text_primary"
            android:padding="5dp"
            android:text="@string/viewCheckBoxText" />

        <CheckBox
            android:id="@+id/viewBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/viewText"
            android:focusable="false"
            android:focusableInTouchMode="false" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/messageCheckBox"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true">

        <TextView
            android:id="@+id/messageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/text_primary"
            android:padding="5dp"
            android:text="@string/messageCheckBoxText" />

        <CheckBox
            android:id="@+id/messageBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/messageText"
            android:layout_centerHorizontal="true"
            android:focusable="false"
            android:focusableInTouchMode="false" />
    </RelativeLayout>

    <View
        android:id="@+id/border"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/contactData"
        android:layout_marginTop="5dp"
        android:background="#31423d42" />
</RelativeLayout>